# linak-controller

./: .gitignore  .prettierrc  CHANGELOG.md  README.md  devshell.nix  flake.nix  formatter.nix  jest.config.js  package-lock.json  package.json  package.nix  pyproject.toml  renovate.json  tsconfig.json
.github/workflows/: docker-image.yml  docker.yml  nix.yml  node.js.yml  nodejs.yml
modules/nixos/: default.nix
recipes/: RECIPES.md
recipes/docker/: .gitignore  Dockerfile  Dockerfile.dockerignore  compose.yml  docker-compose.yml  docker_entrypoint.sh  example.env  healthcheck.sh
reference/: openapi.yaml
src/: config.ts  debouncer.ts  desk.ts  gatt.ts  main.ts  restapi.ts  util.test.ts  util.ts
