[tool.poetry]
name = "linak-controller"
version = "1.2.0"
description = "Command line tool for controlling the Linak standing desks"
authors = ["Rhys Tyers"]
license = "MIT"

[tool.poetry.dependencies]
python = "==3.13.3"
aiohttp = "3.10.11"
appdirs = "1.4.4"
bleak = "0.22.3"
PyYAML = "6.0.2"

[tool.poetry.scripts]
linak-controller = 'linak_controller.main:init'
idasen-controller = 'linak_controller.main:init'

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"